# nix-check-build-merge

./: .gitignore  .mergify.yml  CHANGELOG.md  MANIFEST.in  README.md  flake.nix  nixcbm_start.patch  nixcbm_start.sh  pyproject.toml  setup.cfg  setup.py  supervisord.conf  supervisord.patch
.github/workflows/: build.yml  codeql-analysis.yml  test.yml
docs/: conf.py  index.rst
docs/source/: modules.rst  nix_cbm.nix.rst  nix_cbm.rst
src/nix-cbm/: __init__.py  check_tools.py  checks.py
src/nix-cbm/nix/: check-maintainer.nix
src/nix_cbm/: __init__.py  checks.py  config.py  git.py  models.py
src/nix_cbm/frontend/: __init__.py
src/nix_cbm/frontend/static/: main.js
src/nix_cbm/frontend/templates/: base.html  failed.html  index.html  settings.html  starter-template.html
src/nix_cbm/migrations/: env.py
src/nix_cbm/migrations/versions/: a8a0f243d7cd_add_last_checked.py  b5b577ca45b3_move_unique_constraint.py  b5dd66973c43_add_arch_to_persistent_config.py  b807041898dd_initial_db.py  eeb522bbc0ff_add_persistent_config.py  f875eee40428_add_arch.py
tests/: checks_test.py  frontend_test.py  git_test.py  models_test.py  nix_cbm_test.py
