[metadata]
name = nix-check-build-merge 
version = 0.0.1
author = Florian Brandes
author_email = florian.brandes@posteo.de
description = This project will allow you to check for build failures all the nixpkgs you maintain 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gador/nix-check-build-merge
project_urls =
    Bug Tracker = https://github.com/gador/nix-check-build-merge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
